[PRMT-987] Add integration test for the response body
